2007-07-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit.c: translate the the "ENCODING" string printed
	on the command line help. Patch by Gabor Kelemen.

2007-07-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugin-manager.c:
	* gedit/gedit-prefs-manager.h:
	* gedit/gedit-prefs-manager-app.c:
	* gedit/gedit-plugins-engine.c:

	Use GKeyFile instead of gnome_config_* and remove other minor
	uses of libgnome.

=== gedit 2.19.2 ===

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.19.2 released

2007-07-03  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Makefile.am: added SubstitutionParser.py
	
2007-07-03  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	* plugins/snippets/snippets/SubstitutionParser.py:
	* plugins/snippets/snippets/Parser.py:
	* plugins/snippets/snippets/Snippet.py:
	* plugins/snippets/snippets/Placeholder.py:
	
	Added new regex placeholder type to snippets

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c:
	* plugins/snippets/snippets/Manager.py:

	Adapt to GtkSourceView smart-home-end renaming.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* plugins/externaltools/tools/functions.py:
	* plugins/externaltools/tools/manager.py:
	
	Fix a couple of problems in latest patch.

2007-07-02  Jesse van den Kieboom  <jesse@icecrew.nl>

	* bindings/python/Makefile.am:
	* bindings/python/gedit.defs:
	* bindings/python/gedit.override:
	
	added bindings for gedit-language-manager
	
	* plugins/snippets/snippets/Manager.py:
	* plugins/snippets/snippets/WindowHelper.py:
	
	use gtksourceview2 instead of gtksourceview1 and use new language
	manager bindings
	
	* plugins/externaltools/tools/functions.py:
	* plugins/externaltools/tools/manager.py:
	
	use new language manager bindings
	
2007-07-01  Paolo Borelli  <pborelli@katamail.com>

	* plugins/taglist/gedit-taglist-plugin-parser.c: look up
	tags in .gnome2/gedit/taglist beside the legacy