@@ -9,6 +9,7 @@
 	* gedit/gedit-prefs-manager.h:
 	* gedit/gedit-prefs-manager-app.c:
 	* gedit/gedit-plugins-engine.c:
+	* gedit/gedit-metadata-manager.c:
 
 	Use GKeyFile instead of gnome_config_* and remove other minor
 	uses of libgnome.
